--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,21 @@
+body { margin: 0; }
 #header{
-    min-height: 50px;
-    width: 100%;
-    color: white;
+    color: blanchedalmond;
     background-color: black;
+    height: 100px;
+    width: 100%;
 
 }
+#container3d {
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1000px;
+    height: 500px;
+    border: 5px solid red;
+    display: block;
+
+    overflow: hidden; 
+
+}
+canvas { display: block; width: 100%; height: 100%; }
