--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ body { margin: 0; }
     margin-right: auto;
     width: 1000px;
     height: 500px;
-    border: 5px solid red;
+    border: 5px solid rgb(119, 0, 255);
     display: block;
 
     overflow: hidden; 
